Fixed icon display on small devices when feed URL is present.

--- a/assets/styles/embed.less
+++ b/assets/styles/embed.less
@@ -1219,12 +1219,13 @@ body.vjs-full-window {
     z-index: 1;
     @media (max-width: 420px) {
       top: 96px;
-      right: 62px
+      right: 62px;
+      br { display: none; }
     }
     a {
       font-size: 1.3em;
       color: white;
-      :hover {
+      &:hover {
         text-decoration: none;
       }
     }
